@@ -5,6 +5,9 @@ Unreleased
   * (bugfix) Fix compatibility issue with AIX (#69, @blentzgh)
   * (bugfix) Fix -q not suppressing some ICMP error messages (#83)
   * (bugfix) Fix -M expecting an argument, when it shouldn't
+  * (bugfix) Fix option -H (ttl) for IPv6
+  * (bugfix) Fix option -M (don't fragment) for IPv6
+  * (bugfix) Fix option -O (ToS) for IPv6
 
 2017-01-11  David Schweikert  <david@schweikert.ch>
   * Version 3.15
